testsuite/tests/overloadedrecflds/should_run/OverloadedRecFldsRun08_B.hs
{-# LANGUAGE OverloadedRecordFields, TypeFamilies #-}

module OverloadedRecFldsRun08_B ( F(..) ) where

import OverloadedRecFldsRun08_A ( F(..) )

data instance F Int = MkFInt { foo :: Int }
